src/components/Main/List/List.css
#items-container {
    overflow: auto;
    scroll-behavior: smooth;
}

.list-group-item:last-child {
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
}

.list-group-item:first-child {
    border-top-right-radius: 0;
    border-top-left-radius: 0;
}

.plugin-item-list {
    display: flex;
    align-items: center;
    justify-content: space-between;
    cursor: pointer;
}

.plugin-image-list {
    width: 30%;
    border-radius: calc(.25rem - 1px);
}

.img-and-text-container-list {
    display: flex;
    width: 100%;
}

.img-and-text-container-gallery {
    height: 80%;
    width: 100%;
}

.company-and-type-container-list {
    color: rgb(117, 117, 117);
}

.name-and-company-container-list {
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding-left: 1em;
    width: 50%;
}

.plugin-name-list {
    width: 80%;
    font-size: 1.5em;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.ul-gallery {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    padding-top: 2.5%;
    padding-left: 0;
}

.item-link {
    display: flex;
    justify-content: center;
    text-decoration: none;
    color: #212529 !important;
}

.li-gallery {
    margin: 0.5em;
}

.plugin-item-gallery {
    display: flex;
    align-items: center;
    justify-content: space-between;
    cursor: pointer;
    width: 20em;
    height: 17em;
}

.plugin-image-gallery {
    height: 100%;
}

.plugin-name-gallery {
    display: block;
    width: 100%;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    text-align: center;
}

.hide-plugin-arrow {
    display: none;
}

#none-found-message {
    display: none;
    align-self: center;
    padding: 1em;
    text-align: center;
}

@media screen and (min-width: 767px) {
    .plugin-name-list {
        font-size: 2em;
    }
}

@media screen and (max-width: 440px) {
    .company-and-type-container-list {
        display: flex;
        flex-direction: column;
    }

    .type-list {
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
    }

    #company-and-type-dash-list {
        display: none;
    }
}

